--- a/about.css
+++ b/about.css
@@ -238,3 +238,10 @@ ul li:nth-child(4):hover {
     padding:2px;
     word-spacing: 3px;
   }
+
+div {
+    margin:10px;
+    padding:0;
+    display: block;
+    width: 5em;
+}
