--- a/style.css
+++ b/style.css
@@ -2,15 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&family=Lobster&family=Silkscreen&display=swap');
 
 * {
-  padding: 0px;
-  margin: 10px;
+  padding: 0;
+  margin: 0;
   font-family: 'Times New Roman', serif;
  
 }
   
-  header {
-    background: blue;
-  }
+header {
+  margin:0;
+  padding:0;
+}
   
   body {
     background:gray;
@@ -20,7 +21,8 @@
   }
   
   .topnav {
-    
+    margin:0;
+    padding:0;
     height:46px;
     background:rgba(0,0,0,0.2);
     /*border-bottom:  7px solid rgba(0,0,0,0.5);*/
@@ -29,23 +31,22 @@
   .topnav h1 {
     margin:0;
     padding:0;
-    color:#F4EDED;
+    color: aliceblue;
     font-family: 'Lobster', cursive;
     letter-spacing: 6px;
     display:inline-block;
-    margin-left:21%;
-    /*text-shadow: 0px 0px 10px cyan;*/
+    margin-left:11%;
+    
   }
 
-  a {
+  .topnav a {
     margin:0;
     padding:8px;
     font-size: 20px;
-    font-family: sans serif;
+    
     letter-spacing: 4px;
     text-decoration:none;
-    color:#F4EDED;
-    /*text-shadow: 0px 0px 10px cyan;*/
+    color: aliceblue;
     text-transform: uppercase;
     
   }
@@ -56,9 +57,10 @@
   }
   
   .search-bar {
-    margin:0px;
+    margin:8px;
     padding:0px;
     float:right;
+    
   }
   .search-bar input[type="Search"]{
     background:rgba(0,0,0,0.2);
@@ -104,7 +106,7 @@
     text-align:center;
     font-family: 'Lobster', cursive;
    /* text-shadow: 0px 0px 9px cyan;*/
-    color: #F4EDED;
+    color: aliceblue;
     letter-spacing: 2px;
   }
   
@@ -124,10 +126,10 @@
   .logIn input[type="text"], .logIn input[type="@text"], .logIn input[type="password"]
   {
     border:none;
-    border-bottom:1px solid cyan;
-    background:transparent;
+    border-bottom:2px solid cyan;
+    background: rgba(0,0,0,0.2);
     outline:none;
-    color:aliceblue;
+    color: rgba(255,255,255);
     font-size:16px;
     
   }
@@ -137,6 +139,8 @@
     border:none;
     outline:none;
     height:25px;
+    font-weight: bold;
+
     color:black;
     font-size:15px;
     background: rgba(0, 255, 255, 0.658);
@@ -144,24 +148,32 @@
     border-radius:0px;
   }
   
-  .logIn input[type="submit"]:hover 
+.logIn input[type="submit"]:hover 
   {
     background:cyan;
     box-shadow: 0px 0px 6px cyan;
   }
   
-  .logIn a {
+.logIn a {
     color:black;
-
     font-size:14px;
     font-weight:bold;
-  }
+    margin:0;
+    padding:8px;
+    letter-spacing: 3px;
+    text-decoration:none;
+    text-transform: uppercase;
+}
+
+.logIn:hover:a {
+  text-shadow: 0px 0px 15px cyan;
+}
   
-  ::placeholder {
+::placeholder {
     color: rgba(255,255,255,0.5);
-  }
+}
   
-  .gif {
+.gif {
     width:130px;
     height:120px;
     overflow:hidden;
@@ -170,4 +182,33 @@
     left:calc(49% - 50px);
     border-radius:50%;
     z-index:1;
-  }
+}
+
+footer {
+  margin:0;
+  padding:0;
+}
+
+.footer {
+  margin:0;
+  padding:0;
+  margin-bottom: -10%;
+  height:20%;
+  width:20%;
+}
+
+.footer p {
+  margin:0;
+  padding:0;
+  margin-top: 600px;
+  display:flexbox;
+  font-family: 'Times New Roman', Times, serif;
+  color: #e3f6f5;
+  text-shadow: 0 0 5px #e3f6f5;
+}
+
+.footer:hover p{
+  color:aqua;
+  text-shadow: 0 0 5px aqua;
+  
+}
