--- a/about.css
+++ b/about.css
@@ -4,6 +4,7 @@
     margin:0;
     padding:0;
     list-style:none;
+    
 }
 
 html {
@@ -41,7 +42,7 @@ html {
     position:static;
     margin:0px;
     float:right;
-    width:20%;
+    width:fit-content;
     background: rgba(0,0,0,0.5);
 }
 
@@ -248,7 +249,7 @@ ul li:nth-child(4):hover {
 
 div {
     margin:0;
-    margin-top: 120px;
+    margin-top: 10px;
     padding:0;
     display: block;
     width: 6em;
@@ -269,21 +270,101 @@ div {
     margin-right:auto;
 }
 
-.container-fluid {
-    margin:5px;
-    margin-top: 0%;
-    box-sizing: border-box;
-    
+.row {
+    margin-top: 10px;
+    flex-direction: column;
 }
 
-.row {
-    margin:10px;
-    margin-top: -5%;
+section #skills{
+    display:inline-block;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height:100vh;
 }
+section:nth-child #skills (odd){
+    background-color: #2d2d2d;
+}
+
+.container {
+    max-width:60%;
+}
+
+.bar {
+    color:#666;
+    letter-spacing: 1px;
+    font-weight: 500;
+    font-size: 16px;
+    position:relative;
+}
+
+.bar .thumb {
+    position:relative;
+    display: inline-block;
+    width:100%;
+    height:10px;
+    background-color: black;
+    border-radius:60px;
+    margin-top: 20px;
+}
+
+.bar span {
+    position:absolute;
+    content:'';
+    top:0;
+    left:0;
+    height:100%;
+    background: linear-gradient(to left, #de7e9e,#666, #3bfff5);
+    border-radius: 50px;
+}
+
+.bar:nth-child(1) span{
+    width:80%;
+}
+
+.bar:nth-child(2) span{
+    width:40%;
+}
+
+.bar:nth-child(3) span{
+    width:70%;
+}
+
+.bar abbr {
+    width:50px;
+    display:inline-block;
+    height:35px;
+    border-radius: 50px;
+    text-align: center;
+    line-height:35px;
+    position:absolute;
+    top:30px;
+    margin-left:-5px;
+    z-index:1;
+    background:linear-gradient(to left, #ef6d98, #2db0d1);
+    box-shadow: 0 5px 30px rgb(255, 0, 87/ 50%), 0 5px 3px rgb(255, 255, 59/ 50%);
+}
+
+.bar:nth-child(1) abbr{
+    left:80%;
+}
+
+.bar:nth-child(2) abbr{
+    left:40%;
+}
+
+.bar:nth-child(3) abbr{
+    left:70%;
+}
+
 
 #skills ol {
-    display:flex;
-     flex-wrap: wrap;
+
+    margin:0px;
+    margin-top: 0%;
+    box-sizing: border-box;
+    height: 100%;
+    display:inline-block;
 }
 
 #skills {
@@ -298,6 +379,11 @@ div {
    
 }
 
+.col-sm-2 {
+    padding:10px;
+    
+}
+
 .col-sm-2, h3, p {
     color: #F4EDED;
 }
@@ -305,7 +391,7 @@ div {
 #education {
     margin:0;
     padding:5px;
-    width:100%;
+    width:auto;
     height:300px;
     display:flex;
     grid-template-columns: auto auto auto;
@@ -323,15 +409,18 @@ div {
 
 #testimonials {
     padding:10px;
-    width:1300px;
+    width:auto;
     height:500px;
-    display: flex;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
     float:left;
     background-color: #877666;
-    flex-direction: row;
-    align-items: flex-start;
+    /* flex-direction: row;
+    align-items: flex-start; */
     word-spacing: 5px;
     border: 1px solid black;
+    gap: 3rem;
+   
 }
 
 #testimonials p {
@@ -340,4 +429,13 @@ div {
 
 #testimonials h3 {
     border-bottom: 1px solid black;
+}
+
+.container-fluid {
+    width:100%;
+    display: flex;
+}
+
+#container {
+    display:box;
 }
