--- a/about.css
+++ b/about.css
@@ -10,11 +10,14 @@
 html {
     scroll-behavior: smooth;
 }
+a {
+    text-decoration: none;
+}
 
 #content {
     display:static;
     background:black;
-    background-image:url(/pics/earthfantasy.jpg);
+    background-image:url(./pics/earthfantasy.jpg);
     background-size:100%;
     height:800px;
     background-repeat: no-repeat;
@@ -60,6 +63,7 @@ html {
 .topnav a:hover {
     color:aliceblue;
     text-shadow: 0 0 10px aliceblue;
+    text-decoration: none;
 }
 
 button input[type="Search"]
@@ -93,6 +97,10 @@ button input[type="Search"]
     text-decoration: none;
     color:rgba(255,255,255,0.5);
 }
+
+.social-icons:hover a {
+    text-decoration: none;
+} 
 
 ul {
     margin:0;
@@ -164,6 +172,7 @@ ul li:hover:before {
 ul li:hover {
     translate:calc(50% 50%);
     transform:scale(1.1);
+    
 }
 
 ul li:nth-child(1):hover {
@@ -191,7 +200,7 @@ ul li:nth-child(4):hover {
     text-shadow: 0 0 5px purple;
 }
 
-.card {
+.about-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 240px;
     width:20%;
@@ -200,7 +209,7 @@ ul li:nth-child(4):hover {
     text-align: center;
   }
 
-.card h1 {
+.about-card h1 {
     font-family: 'Lobster', cursive;
     font-size: 33px;
     color:gainsboro;
@@ -211,7 +220,7 @@ ul li:nth-child(4):hover {
     font-size: 18px;
   }
   
-  .card button {
+.about-card button {
     border: none;
     outline: 0;
     display: inline-block;
@@ -225,7 +234,7 @@ ul li:nth-child(4):hover {
     font-family: 'Lobster', cursive;
   }
   
-  .card a {
+  .about-card a {
     text-decoration: none;
     font-size: 22px;
     color: grey;
@@ -237,14 +246,15 @@ ul li:nth-child(4):hover {
     text-shadow: 0 0 2px aliceblue;
   }
 
-  .card a:hover {
+  .about-card:hover a {
     opacity: 0.7;
   }
 
-  .card p {
+  .about-card p {
     margin: 0;
     padding:0;
     word-spacing: 3px;
+    font-family: 'Times New Roman', Times, serif;
   }
 
 div {
@@ -256,11 +266,11 @@ div {
     
 }
 
-.col-sm-2 {
+.col-lg-3 {
     margin:0;
     padding:2px;
     border: 0px solid rgba(250, 246, 246, 0.1);
-    display: box;
+    display: inline-block;
     align-content: center;
     position: relative;
     background-color: rgba(250, 246, 246, 0.1);
@@ -268,12 +278,8 @@ div {
     overflow: hidden;
     margin-left:auto;
     margin-right:auto;
-}
-
-.row {
-    margin-top: 10px;
-    flex-direction: column;
-}
+    
+}   
 
 section #skills{
     display:inline-block;
@@ -282,12 +288,20 @@ section #skills{
     width:100%;
     height:100vh;
 }
+
 section:nth-child #skills (odd){
     background-color: #2d2d2d;
 }
 
-.container {
-    max-width:60%;
+.wrap {
+    margin:0;
+    padding:0;
+    max-width:100%;
+    width:fit-content;
+    display: inline-block;
+    top:0;
+    left:0;
+    
 }
 
 .bar {
@@ -358,12 +372,14 @@ section:nth-child #skills (odd){
 }
 
 
-#skills ol {
+#skills ol li{
 
     margin:0px;
+    padding:0;
     margin-top: 0%;
     box-sizing: border-box;
-    height: 100%;
+    height: 300px;
+    width: 1000vh;
     display:inline-block;
 }
 
@@ -373,50 +389,63 @@ section:nth-child #skills (odd){
     width:100%;
     height:1000px;
     display: flex;
-    background-image: url(/pics/saturn\ from\ earth.jpg);
+    background-image: url(./pics/saturn\ from\ earth.jpg);
     background-size:cover;
     background-repeat: no-repeat;
    
 }
 
-.col-sm-2 {
-    padding:10px;
-    
-}
-
-.col-sm-2, h3, p {
-    color: #F4EDED;
+li {
+    margin:0;
+    padding:0px;
+    width:100%;
 }
 
 #education {
     margin:0;
-    padding:5px;
-    width:auto;
-    height:300px;
+    padding:0;
+    width:1300px;
+    height:600px;
     display:flex;
-    grid-template-columns: auto auto auto;
+    gap:30px;
     background:#666;
-    flex-direction: row;
     align-items: center;
-    align-items: flex-start;
+    
 }
 
 #education p {
     border:1px solid black;
-    flex-direction: row;
-    align-items: flex-start;
+    width:300px;
+    height: 100px;
+}
+
+.card-mb-3 {
+    
+    border-radius: 50px;
+    background-color: black;
+}
+
+.col-md-4 img {
+    max-width: 540px;
+    width:300px;
+    height:300px;
+}
+
+.card-title{
+    font-size: 18px;
+    width:100px;
 }
 
 #testimonials {
-    padding:10px;
-    width:auto;
+    padding:0px;
+    width:1000px;
     height:500px;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    float:left;
+    
     background-color: #877666;
-    /* flex-direction: row;
-    align-items: flex-start; */
+    flex-direction: row;
+    align-items: flex-start; 
     word-spacing: 5px;
     border: 1px solid black;
     gap: 3rem;
@@ -431,11 +460,13 @@ section:nth-child #skills (odd){
     border-bottom: 1px solid black;
 }
 
-.container-fluid {
-    width:100%;
-    display: flex;
+#testimonials .card {
+    position: relative;
+    display:flexbox;
+    width:300px;
+    height:300px;
+    gap:20px;
 }
 
-#container {
-    display:box;
-}
+
+
