--- a/about.css
+++ b/about.css
@@ -25,7 +25,7 @@ a {
 
 .topnav a {
     color: rgba(255,255,255,0.5);
-    padding:30px;
+    padding:20px;
     text-decoration:none;
     font-size:20px;
     font-family: 'Space Mono', monospace;
@@ -387,7 +387,7 @@ section:nth-child #skills {
     margin:0;
     padding:10px;
     width:100%;
-    height:100%;
+    height:500px;
     display:flex;
     gap:50px;
     background-image:url(./pics/rednebula.jpg);
@@ -406,7 +406,10 @@ section:nth-child #skills {
 
 #education .card {
     background: rgba(0, 0, 0, 0.7);
+    width: 400px;
+    height:400px;
 }
+
 
 #education .card-title{
     color: #9DB5B2;
@@ -472,7 +475,7 @@ section:nth-child #skills {
 .col h3 {
     font-family: 'Lobster', cursive;
     color: #2db0d1;
-    border-bottom:3px solid aliceblue;
+    border-bottom:3px solid rgba(255, 255, 255, 0.2);
 }
 
 .card img {
