--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,8 @@
+
+body {
+  background-image: url(./pics/Nepal-The-Best-of-Mountains-1-1.jpg);
+}
+
 #contact {
     font-family: 'Courier New', Courier, monospace;
     font-weight:bold;
@@ -9,7 +14,7 @@
   }
   #social-link {
     text-decoration: none;
-    color: #531063;
+    color: olive;
     font-weight: bold;
     font-size: 20px;
     padding: 25px;
@@ -31,7 +36,7 @@ input[type=text], select, textarea {
 
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
-  background:linear-gradient(to bottom right, violet, rgb(100, 42, 139));
+  background:linear-gradient(to right, olive, rgb(9, 178, 235));
   color: white;
   padding: 13px 40px;
   border: none;
@@ -40,19 +45,24 @@ input[type=submit] {
 }
 /* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
-  background-color: #B09CD1;
+  background: olive;
 }
+
 #button {
   margin-left: 130px;
 }
+
 /* Add a background color and some padding around the form */
 #form {
   border-radius: 5px;
-  background-color: #D6CAE5;
+  background-image: url(./gifs/tropicalbeach.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 30px;
   width: 400px;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, .67);
 }
+
 #form {
   padding-left: 0px;
   margin: auto;
@@ -61,12 +71,13 @@ input[type=submit]:hover {
 #labels {
   padding-left: 40px;
 }
-1:42
+
 footer{
   position: relative;
   width: 100%;
   height: 80px;
-  background: #944BA5;
+  background: black;
+  color:olivedrab;
   display: flex;
   flex-direction: column;
   align-items: center;
