--- a/about.css
+++ b/about.css
@@ -247,7 +247,7 @@ ul li:nth-child(4):hover {
     text-shadow: 0 0 2px aliceblue;
   }
 
-  .about-card:hover a {
+  a:hover  {
     opacity: 0.7;
   }
 
