--- a/contact.css
+++ b/contact.css
@@ -73,10 +73,12 @@ input[type=submit]:hover {
 }
 
 footer{
+  margin:0;
+  padding:0;
   position: relative;
   width: 100%;
   height: 80px;
-  background: black;
+  background: rgba(0, 0, 0, .6);
   color:olivedrab;
   display: flex;
   flex-direction: column;
